[package]
name = "pmrpc"
version = "1.1.0"
edition = "2021"
authors = ["Nigel Baillie <nigel@baillie.dev>"]
description = "Poor man's RPC. Not pretty, but plenty versatile."
license-file = "LICENSE.txt"
repository = "https://github.com/Resonious/pmrpc"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
